# zero2production

./: Cargo.toml  Dockerfile  flake.nix
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routers/: health_check.rs  subscriptions.rs
tests/: health_check.rs
